<resources>
    <string name="app_name">SPFPE</string>
    <string name="assignments_empty_text">No Assignments</string>
    <string name="google_app_id">spfpe-1300</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_text">SPF PE</string>
    <string name="copyright">By Dylan Redfield</string>
    <string name="already_have">Already Have an Account?</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="enter">Enter</string>
    <string name="username_hint">Enter Username (first.last.spfhs)</string>
    <string name="password_hint">Enter Student ID</string>
    <string name="password_confirm_hint">Confirm Student ID</string>
    <string name="no_account">Do not have an account?\nSign Up!</string>
    <string name="grade_text_view">Grade: </string>
    <string name="grade_hint">Grade</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="makeups">Makeups</string>
    <string name="fitness">Fitness</string>
    <string name="assignments">Assignments</string>
    <string name="logout">Logout</string>
    <string name="fitness_main_empty_list">No Fitness Tests</string>
    <string name="new_class">New Class</string>
    <string name="teacher_hint">Teacher</string>
    <string name="period_hint">Period</string>
    <string name="marking_period_hint">Marking Period: </string>
    <string name="select_class">Select Class</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="case_sensitive">*Username is Case Sensitive</string>
    <string name="empty_makeups">No Makeups to Display</string>
    <string name="time_hint">Minutes Exercised</string>
    <string name="exercise_type_hint">Event</string>
    <string name="date">Date</string>
    <string name="analyze_class">Analyze Class</string>
</resources>
